<resources>
    <string name="app_name">Notitool</string>

    <string name="channel_name">Notitool</string>
    <string name="channel_description">Notitool channel</string>
    <string name="recent_notifications">Recent notifications</string>

    <string name="message_title">Messages</string>

    <string name="title_messages">Messages</string>
    <string name="title_noti_by_app">Notifications by App</string>
    <string name="title_noti">Notifications</string>

    <string name="search">Search</string>

    <string name="tab_messages">Messages</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_more">more</string>

    <string name="main_menu_select">Select</string>
    <string name="main_menu_delete_all">Delete All</string>
    <string name="main_menu_read_all">Read All</string>
    <string name="main_menu_settings">Settings</string>

    <string name="bottom_sheet_menu_open">Open</string>
    <string name="bottom_sheet_menu_copy">Copy to clipboard</string>
    <string name="bottom_sheet_menu_block">Block</string>
    <string name="bottom_sheet_menu_block_show">Show status bar notification for this App</string>
    <string name="bottom_sheet_menu_block_hide">Hide status bar notification for this App</string>
    <string name="bottom_sheet_menu_no_save">No save for this App</string>
    <string name="bottom_sheet_menu_delete">Delete</string>

    <string name="dialog_notification_access">Notification access</string>
    <string name="dialog_notification_access_permission">The app needs the Notification access permission to record notifications.\n\nThe information is only used to display the notification in the app and is never collected in any way.</string>
    <string name="dialog_allow">Allow</string>

    <string name="setting_menu_show_system_apps">Show system apps</string>
    <string name="setting_menu_hide_system_apps">Hide system apps</string>
    <string name="setting_menu_all_on">All on</string>
    <string name="setting_menu_all_off">All off</string>

    <string name="setting_block_description">Set it not to appear in the notification bar.\nWhen the switch is turned on, block it so that it is not visible in the notification bar.</string>
    <string name="setting_block_all_on">Do you want to hide notifications from all apps in the notification bar?</string>
    <string name="setting_block_all_off">Do you want to show notifications from all apps in the notification bar?</string>
    <string name="setting_save_all_on">Do you want to save notifications for all apps?</string>
    <string name="setting_save_all_off">Don\'t want to save all app\'s notifications?</string>

    <string name="today">Today</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="delete_all_messages">Delete all messages?\nData cannot be recovered.</string>
    <string name="delete_all_notifications">Delete all notifications?\nData cannot be recovered.</string>

    <string name="snack_undo">Undo</string>

    <string name="snack_read_all_done">All messages have been read.</string>
    <string name="snack_delete_all_done">All messages have been deleted.</string>

    <!--    <string name="snack_selected_was_deleted">The selected items have been deleted.</string>-->

    <string name="snack_copied_to_clipboard">Copied to clipboard</string>
    <string name="snack_deleted">deleted</string>
    <string name="snack_deleted2">Deleted</string>

    <string name="more_settings">Settings</string>
    <string name="more_dark_mode">Dark Mode</string>
    <string name="dark_mode_system">System</string>
    <string name="dark_mode_on">On</string>
    <string name="dark_mode_off">Off</string>
    <string name="more_block_notifications">Block Notifications</string>
    <string name="more_save_notifications">Save Notifications</string>
    <string name="more_remove_ads">Remove Ads</string>
    <string name="more_information">Information</string>
    <string name="more_help">Help</string>
    <string name="more_email">Send Email</string>
    <string name="more_privacy_policy">Privacy Policy</string>
</resources>
