<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?appToolbarColor"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:contentDescription="@null"
                        android:padding="10dp"
                        android:src="@drawable/ic_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="?iconColor" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:ellipsize="end"
                        android:includeFontPadding="false"
                        android:lines="1"
                        android:text="@string/more_dark_mode"
                        android:textColor="?attr/textColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@id/back"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="14dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RadioButton
                android:id="@+id/off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="?iconColor"
                android:padding="10dp"
                android:text="@string/dark_mode_off"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="?iconColor"
                android:padding="10dp"
                android:text="@string/dark_mode_on"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="?iconColor"
                android:padding="10dp"
                android:text="@string/dark_mode_system"
                android:textSize="16sp" />
        </RadioGroup>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>