<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="18dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="3dp"
                android:src="@drawable/ic_play"
                app:tint="?iconColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/bottom_sheet_menu_open"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <!--        <View-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="1dp"-->
        <!--            android:background="@android:color/darker_gray"/>-->

        <LinearLayout
            android:id="@+id/copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="18dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="3dp"
                android:src="@drawable/ic_copy"
                app:tint="?iconColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/bottom_sheet_menu_copy"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:id="@+id/block"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="?android:selectableItemBackground"-->
<!--            android:gravity="center_vertical"-->
<!--            android:orientation="horizontal"-->
<!--            android:padding="18dp">-->

<!--            <ImageView-->
<!--                android:layout_width="25dp"-->
<!--                android:layout_height="25dp"-->
<!--                android:padding="3dp"-->
<!--                android:src="@drawable/ic_disable_alarm"-->
<!--                app:tint="?iconColor" />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:text="@string/bottom_sheet_menu_block_show"-->
<!--                android:textSize="14sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:id="@+id/save"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="?android:selectableItemBackground"-->
<!--            android:gravity="center_vertical"-->
<!--            android:orientation="horizontal"-->
<!--            android:padding="18dp">-->

<!--            <ImageView-->
<!--                android:layout_width="25dp"-->
<!--                android:layout_height="25dp"-->
<!--                android:padding="3dp"-->
<!--                android:src="@drawable/ic_disable"-->
<!--                app:tint="?iconColor" />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:text="@string/bottom_sheet_menu_no_save"-->
<!--                android:textSize="14sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->
<!--        </LinearLayout>-->


        <!--        <View-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="1dp"-->
        <!--            android:background="@android:color/darker_gray"/>-->

        <LinearLayout
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="18dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="3dp"
                android:src="@drawable/ic_trash"
                app:tint="?iconColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/bottom_sheet_menu_delete"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </LinearLayout>
</layout>